# cmd

./: .gitignore  .gitmodules  CMakeLists.txt  Design Decisions.md  README.md
.github/workflows/: build_and_run_tests.yml
include/cmd/: cereal.hpp  cmd.hpp  imgui.hpp  imgui_and_cereal.hpp  imgui_and_ser20.hpp  ser20.hpp
src/: Command.hpp  Executor.hpp  ExecutorChain.hpp  History.hpp  _README.md
src/internal/: CircularBuffer.hpp
test/: CMakeLists.txt  History.cpp  test.cpp  tests.cpp
tests/: CMakeLists.txt  CircularBuffer.cpp  History.cpp  Serialization.cpp
